my-nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "kavya-devops.ekzero.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx
            port:
              number: 8088
      - path: /senior
        pathType: Prefix
        backend:
          service:
            name: my-nginx
            port:
              number: 8088
